<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCDAA3"
    tools:context=".no_dambel">

    <!-- プッシュスタート -->

    <!-- 縦方向に左側から100% -->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_0_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.00"/>

    <!-- 縦方向に左側から2% -->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_1_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02"/>

    <!-- 縦方向に左側から49% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_2_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.26" />

    <!-- 縦方向に左側から2% -->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_3_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.37"/>



    <!-- 縦方向に左側から2% -->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_5_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.63"/>






    <!-- 横方向に上から15% -->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_0_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_1_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"/>

    <!-- 横方向に上から25% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_2_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_3_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_4_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>





    <!-- 横方向に上から85% -->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_5_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"/>

    <!-- 横方向に上から25% -->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_6_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.00"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/shape_button"
        android:text="戻る"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_6_guideline"
        app:layout_constraintLeft_toLeftOf="@id/vertical_3_guideline"
        app:layout_constraintRight_toLeftOf="@id/vertical_5_guideline"
        app:layout_constraintTop_toTopOf="@id/horizontal_5_guideline"
        app:fontFamily="@font/font_first"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#D5D5D5"
        android:text="@string/setting_pet"
        android:gravity="center"
        android:textSize="36sp"
        app:fontFamily="@font/font_first"
        app:layout_constraintBottom_toTopOf="@id/horizontal_0_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/vertical_0_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/setting_pet1"
        android:textSize="24sp"
        app:fontFamily="@font/font_first"
        app:layout_constraintBottom_toTopOf="@id/horizontal_2_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/vertical_0_guideline"
        app:layout_constraintTop_toTopOf="@id/horizontal_1_guideline"

        app:layout_constraintVertical_bias="0.213" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:fontFamily="@font/font_first"
        app:layout_constraintBottom_toTopOf="@id/horizontal_3_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/vertical_0_guideline"
        app:layout_constraintTop_toTopOf="@id/horizontal_2_guideline"
        app:srcCompat="@drawable/traning_pet" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/setting_pet2"
        android:textSize="24sp"
        app:fontFamily="@font/font_first"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_4_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_2_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_1_guideline"
        app:layout_constraintTop_toTopOf="@id/horizontal_3_guideline" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/setting_pet3"
        app:fontFamily="@font/font_first"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_5_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_0_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_1_guideline"
        app:layout_constraintTop_toTopOf="@id/horizontal_4_guideline"
         />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_pet4"
        app:fontFamily="@font/font_first"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_5_guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical_0_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_1_guideline"
        app:layout_constraintTop_toTopOf="@id/horizontal_4_guideline"
         />

</androidx.constraintlayout.widget.ConstraintLayout>